--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,31 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  line-height: 95px;
   height: 95px;
   border-bottom: 1px solid #E5E5E5;
 }
 
-.nav {
+.header__bar {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 }
 
-.login {
-  cursor: pointer;
+.logo {
+  margin: 0 51px;
+}
+
+.header__menu {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.header__menu-item {
+  font-weight: 400;
+}
+
+.header__menu-item:first-child {
+  
 }
