--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,12 @@
 .header {
-  display: flex;
-  justify-content: space-between;
   line-height: 95px;
   height: 95px;
   border-bottom: 1px solid #E5E5E5;
+}
+
+.head {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__bar {
@@ -12,7 +15,7 @@
 }
 
 .logo {
-  margin: 0 51px;
+  margin: 0 51px 0 0;
 }
 
 .header__menu {
@@ -22,10 +25,27 @@
   list-style: none;
 }
 
-.header__menu-item {
-  font-weight: 400;
+.header__menu-item:first-child,
+.header__menu-item:nth-child(2) {
+  margin-right: 57px; 
 }
 
-.header__menu-item:first-child {
-  
+.header__menu-item:nth-child(3) {
+  margin-right: 42px; 
+}
+
+.header__menu-item:nth-child(4) {
+  margin-right: 49px; 
+}
+
+.header-btn1 {
+  padding: 1px 36px;
+  margin-right: 10px;
+  line-height: 45px;
+}
+
+.header-btn2 {
+  padding: 2px 22px;
+  line-height: 45px;
+  border: none;
 }
