section 1 on 1.2 ready

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,14 +1,23 @@
 /*====GENERAL SETTINGS====================================*/
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   font-family: 'Graphik';
   font-weight: 400;
+}
+
+h1, p, li, nav, button {
+  padding: 0;
+  margin: 0;
 }
 
 .container {
   max-width: 1330px;
   margin: 0 auto;
 }
+
+.subtitle {}
 
 .btn {
   cursor: pointer;
@@ -24,10 +33,12 @@
 .btn-type2 {
   background-color: #FF6336;
   color: white;
+  border: none;
 }
 
 a {
   text-decoration: none;
   color: black;
 }
+
 /*=========================================================*/
