--- a/styles/common.css
+++ b/styles/common.css
@@ -7,7 +7,15 @@
   font-weight: 400;
 }
 
-h1, p, li, nav, button {
+.header__menu, .section2__menu {
+  list-style: none;
+}
+
+nav {
+  list-style: none;
+}
+
+h1, h2, h3, p, li, nav, button {
   padding: 0;
   margin: 0;
 }
@@ -16,8 +24,6 @@ h1, p, li, nav, button {
   max-width: 1330px;
   margin: 0 auto;
 }
-
-.subtitle {}
 
 .btn {
   cursor: pointer;
@@ -40,5 +46,4 @@ a {
   text-decoration: none;
   color: black;
 }
-
 /*=========================================================*/
