--- a/styles/index.css
+++ b/styles/index.css
@@ -73,6 +73,8 @@
   color: #000000;
 }
 
+
+
 .fs25 {
   margin: 0 0 50px 0;
   padding-right: 81px;
@@ -170,3 +172,61 @@
 }
 
 /*-------------</section3>------------------------*/
+.section4-art {
+  padding: 0 40px;
+}
+
+.section4__title {
+  text-align: center;
+  padding: 120px 0 80px 0;
+}
+
+.section4__menu {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.section4__menu-item {
+  margin-right: 110px;
+}
+
+.section4__menu-item:nth-child(3),
+.section4__menu-item:nth-child(6) {
+  margin-right: 0;
+}
+
+.section4__menu-item:nth-child(1),
+.section4__menu-item:nth-child(2),
+.section4__menu-item:nth-child(3) {
+  margin-bottom: 78px;
+}
+
+.section4__menu-item>a {
+  max-width: 315px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section4__menu-title {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 35px;
+  text-align: center;
+  color: #000000;
+}
+
+.section4__menu-title:nth-of-type(1) {
+  padding: 26px 0 20px 0;
+}
+
+.section4__menu-subtitle {
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #000000;
+}
