--- a/styles/common.css
+++ b/styles/common.css
@@ -17,7 +17,15 @@
   padding-bottom: 150px;
 }
 
+.section5 {
+  padding: 154px 0 187px 0;
+}
+
 *nav {
+  list-style: none;
+}
+
+.ul {
   list-style: none;
 }
 
