--- a/styles/common.css
+++ b/styles/common.css
@@ -72,6 +72,11 @@ button {
   margin: 0 auto;
 }
 
+.container2 {
+  max-width: 1023px;
+  margin: 0 auto;
+}
+
 .container1330 {
   max-width: 1330px;
   margin: 0 auto;
