--- a/styles/common.css
+++ b/styles/common.css
@@ -7,6 +7,10 @@
   font-weight: 400;
 }
 
+html {
+  font-size: 16px;
+}
+
 .header__menu,
 .section2__menu {
   list-style: none;
@@ -68,13 +72,13 @@ button {
 
 .title {
   font-weight: 600;
-  font-size: 50px;
+  font-size: 3.125rem;
   line-height: 60px;
   color: #000000;
 }
 
 .subtitle {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 30px;
   color: #000000;
 }
@@ -95,6 +99,7 @@ button {
 }
 
 .btn {
+  font-size: 1rem;
   cursor: pointer;
   font-weight: 600
 }
@@ -122,4 +127,8 @@ a {
   color: black;
 }
 
+.logo_link {
+  display: flex;
+  align-items: center;
+}
 /*=========================================================*/
