--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
   top: 0;
   background-color: white;
   z-index: 99;
-  margin-bottom: 129px;
+  margin-bottom: 9.69%;
   border-bottom: 1px solid #E5E5E5;
 }
 
@@ -97,8 +97,6 @@
   color: #000000;
 }
 
-
-
 .fs25 {
   margin: 0 0 50px 0;
   padding-right: 81px;
@@ -145,6 +143,10 @@
   padding: 5.42% 2.09% 0 1.55%;
 }
 
+.tablet__s2-menues {
+  display: none;
+}
+
 /*-------------</section2>------------------------*/
 .section3__article {
   display: flex;
@@ -159,6 +161,10 @@
 
 .section3__box2 {
   max-width: 440px;
+}
+
+.s3__box2__title-tablet {
+  display: none;
 }
 
 .section3__box3,
@@ -511,4 +517,8 @@
   font-size: 0.75rem;
   line-height: 15px;
   color: #000000;
+}
+
+.tablet__footer {
+  display: none;
 }
